--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -12,8 +12,12 @@
       <p>Exclusive has more than 1 Million products to offer, growing at a very fast. Exclusive offers a diverse assortment in categories ranging from consumer.</p>
     </div>
     <div class="story-image">
-      <!-- Make sure you have an appropriate image in your assets folder -->
-      <img src="assets/images/happy-customer.jpg" alt="Happy customers shopping">
+    <img 
+    ngSrc="assets/images/happy-customer.jpg" 
+    alt="Happy customers shopping" 
+    width="834" 
+    height="609"
+    loading="lazy">
     </div>
   </div>
 
