--- a/src/app/shared/components/promo-banner/promo-banner.html
+++ b/src/app/shared/components/promo-banner/promo-banner.html
@@ -22,7 +22,7 @@
       </div>
     </div>
 
-    <button class="buy-now-button">Buy Now!</button>
+    <button class="buy-now-button" routerLink="/cart">Buy Now!</button>
   </div>
   
   <div class="promo-image">
