--- a/src/app/pages/about/about.scss
+++ b/src/app/pages/about/about.scss
@@ -20,7 +20,7 @@
 
   h1 { font-size: 54px; font-weight: 600; margin-bottom: 40px; }
   p { font-size: 16px; line-height: 1.6; margin-bottom: 24px; }
-  .story-image img { width: 100%; border-radius: 4px; }
+  .story-image img { width: 100%; height: auto; border-radius: 4px; }
 }
 
 // Stats Section
