--- a/src/app/shared/components/service-feature/service-feature.scss
+++ b/src/app/shared/components/service-feature/service-feature.scss
@@ -12,7 +12,7 @@
   width: 80px;
   height: 80px;
   border-radius: 50%;
-  background-color: #c1c1c1; // A light gray for the outer circle
+  background-color: #c1c1c1; 
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,9 +29,9 @@
   align-items: center;
 
   img {
-    width: 28px; // Adjust icon size as needed
+    width: 28px; 
     height: 28px;
-    filter: brightness(0) invert(1); // Makes black icons white
+    filter: brightness(0) invert(1);
   }
 }
 
