--- a/src/app/shared/components/skeleton-product-details/skeleton-product-details.scss
+++ b/src/app/shared/components/skeleton-product-details/skeleton-product-details.scss
@@ -56,7 +56,7 @@
 }
 .skeleton-main-image {
   width: 100%;
-  height: 450px; // Approximate height of the main image
+  height: 450px; 
 }
 
 .skeleton-product-info {
